# assistant-deps

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
freetype/: CMakeLists.txt  generate.py
freetype/config/: ftconfig.h.in
freetype/files/: include-private.txt  include.txt  src-unix.txt  src.txt
freetype/pkgconfig/: freetype2.pc.in
leptonica/: CMakeLists.txt  generate.py
leptonica/config/: config_auto.h.in
leptonica/files/: include.txt  src.txt
leptonica/pkgconfig/: lept.pc.in
libfacedetection/: CMakeLists.txt  generate.py
libfacedetection/files/: include.txt  src.txt
libffi/: CMakeLists.txt  generate.py
libffi/config/: fficonfig-cmake.h.in
libffi/files/: include-private-target.txt  include-private.txt  include.txt  src-aarch64.txt  src-main.txt  src-riscv.txt  src-x86-64.txt
libffi/pkgconfig/: libffi.pc.in
libice/: CMakeLists.txt  generate.py
libice/config/: config-cmake.h.in
libice/files/: include-private.txt  include.txt  src.txt
libice/pkgconfig/: ice.pc.in
libpng/: CMakeLists.txt  generate.py
libpng/files/: include-private.txt  include.txt  src-arm.txt  src-intel.txt  src-loongarch.txt  src-main.txt  src-mips.txt  src-powerpc.txt  src-riscv.txt
libpng/src/intel/: filter_sse2_intrinsics.c
libpng/src/loongarch/: filter_lsx_intrinsics.c  loongarch_lsx_init.c
libpng/src/mips/: filter_mmi_inline_assembly.c  filter_msa_intrinsics.c  mips_init.c
libpng/src/powerpc/: filter_vsx_intrinsics.c  powerpc_init.c
libpng/src/riscv/: filter_rvv_intrinsics.c  riscv_init.c
libsm/: CMakeLists.txt  generate.py
libsm/config/: config-cmake.h.in
libsm/files/: include-private.txt  include.txt  src.txt
libsm/pkgconfig/: sm.pc.in
libwebp/: CMakeLists.txt  generate.py
libwebp/config/: config.h.in
libwebp/files/: include-private.txt  include.txt  src-avx2.txt  src-decoder.txt  src-demux.txt  src-main.txt  src-mux.txt  src-sharpyuv.txt  src-sse.txt
libwebp/include-private/dec/: alphai_dec.h  vp8_dec.h  vp8i_dec.h  vp8li_dec.h  webpi_dec.h
libx11/: CMakeLists.txt  generate.py
libx11/config/: XlibConf.h.in  config-cmake.h.in
libx11/files/: include-private.txt  include.txt  src-module.txt  src-xcb.txt  src.txt
libx11/include-private/: ks_tables.h
libx11/pkgconfig/: x11-xcb.pc.in  x11.pc.in
libxau/: CMakeLists.txt  generate.py
libxau/config/: config-cmake.h.in
libxau/files/: include.txt  src.txt
libxau/pkgconfig/: xau.pc.in
libxcb/: CMakeLists.txt  generate.py
libxcb-cursor/: CMakeLists.txt  generate.py
libxcb-cursor/files/: include-private.txt  include.txt  src.txt
libxcb-cursor/pkgconfig/: xcb-cursor.pc.in
libxcb-image/: CMakeLists.txt  generate.py
libxcb-image/files/: include.txt  src.txt
libxcb-image/pkgconfig/: xcb-image.pc.in
libxcb-keysyms/: CMakeLists.txt  generate.py
libxcb-keysyms/files/: include.txt  src.txt
libxcb-keysyms/pkgconfig/: xcb-keysyms.pc.in
libxcb-render-util/: CMakeLists.txt  generate.py
libxcb-render-util/files/: include.txt  src.txt
libxcb-render-util/pkgconfig/: xcb-renderutil.pc.in
libxcb-util/: CMakeLists.txt  generate.py
libxcb-util/config/: config-cmake.h.in
libxcb-util/files/: include.txt  src.txt
libxcb-util/pkgconfig/: xcb-atom.pc.in  xcb-aux.pc.in  xcb-event.pc.in  xcb-util.pc.in
libxcb-wm/: CMakeLists.txt  generate.py
libxcb-wm/files/: include.txt  src.txt
libxcb-wm/pkgconfig/: xcb-ewmh.pc.in  xcb-icccm.pc.in
libxcb-wm/src/: ewmh.c
libxcb/config/: config-cmake.h.in
libxcb/files/: include-private.txt  include.txt  src-component.txt  src.txt
libxcb/pkgconfig/: xcb-composite.pc.in  xcb-damage.pc.in  xcb-dbe.pc.in  xcb-dpms.pc.in  xcb-dri2.pc.in  xcb-dri3.pc.in  xcb-glx.pc.in  xcb-present.pc.in  xcb-randr.pc.in  xcb-record.pc.in  xcb-render.pc.in  xcb-res.pc.in  xcb-screensaver.pc.in  xcb-shape.pc.in  xcb-shm.pc.in  xcb-sync.pc.in  xcb-xf86dri.pc.in  xcb-xfixes.pc.in  xcb-xinerama.pc.in  xcb-xinput.pc.in  xcb-xkb.pc.in  xcb-xtest.pc.in  xcb-xv.pc.in  xcb-xvmc.pc.in  xcb.pc.in
libxcb/src/: xproto.c
libxdmcp/: CMakeLists.txt  generate.py
libxdmcp/config/: config-cmake.h.in
libxdmcp/files/: include-private.txt  include.txt  src.txt
libxdmcp/pkgconfig/: xdmcp.pc.in
libxkbcommon/: CMakeLists.txt  generate.py
libxkbcommon/config/: config.h.in
libxkbcommon/files/: include-private.txt  include.txt  src-main.txt  src-x11.txt
libxkbcommon/pkgconfig/: xkbcommon-x11.pc.in  xkbcommon.pc.in
libxtrans/: CMakeLists.txt  generate.py
libxtrans/files/: include.txt
libxtrans/pkgconfig/: xtrans.pc.in
openjpeg/: CMakeLists.txt  generate.py
openjpeg/config/: opj_config.h.cmake.in  opj_config_private.h.cmake.in
openjpeg/files/: include-private.txt  include.txt  src.txt
pcre2/: CMakeLists.txt  generate.py
pcre2/files/: include-private-sljit.txt  include-private.txt  include.txt  src-posix.txt  src-sljit.txt  src.txt
pcre2/pkgconfig/: libpcre2-16.pc.in  libpcre2-32.pc.in  libpcre2-8.pc.in  libpcre2-posix.pc.in
tesseract/: CMakeLists.txt  generate.py
tesseract/config/: config_auto.h.in  version.h.in
tesseract/files/: include-private.txt  include.txt  src-avx.txt  src-avx2.txt  src-avx512.txt  src-fma.txt  src-main.txt  src-neon.txt  src-sse.txt
xorgproto/: CMakeLists.txt  generate.py
xorgproto/files/: include.txt
xorgproto/pkgconfig/: applewmproto.pc.in  bigreqsproto.pc.in  compositeproto.pc.in  damageproto.pc.in  dmxproto.pc.in  dpmsproto.pc.in  dri2proto.pc.in  dri3proto.pc.in  fixesproto.pc.in  fontsproto.pc.in  glproto.pc.in  inputproto.pc.in  kbproto.pc.in  presentproto.pc.in  randrproto.pc.in  recordproto.pc.in  renderproto.pc.in  resourceproto.pc.in  scrnsaverproto.pc.in  videoproto.pc.in  xcmiscproto.pc.in  xextproto.pc.in  xf86bigfontproto.pc.in  xf86dgaproto.pc.in  xf86driproto.pc.in  xf86vidmodeproto.pc.in  xineramaproto.pc.in  xproto.pc.in  xwaylandproto.pc.in
zlib/: CMakeLists.txt  generate.py
zlib/files/: include-private.txt  src.txt
zlib/pkgconfig/: zlib.pc.in
zxing-cpp/: CMakeLists.txt  generate.py
zxing-cpp/files/: include-private.txt  include.txt  src.txt
(+122 files in other folders)
