cmake_minimum_required(VERSION 3.28)
project(assistant-deps)

add_subdirectory(xorgproto)
add_subdirectory(libxau)
add_subdirectory(libxcb)
add_subdirectory(libxcb-render-util)
add_subdirectory(libxcb-wm)
add_subdirectory(libxcb-keysyms)
add_subdirectory(libxcb-util)
add_subdirectory(libxcb-image)
add_subdirectory(libxcb-cursor)
add_subdirectory(libxtrans)
add_subdirectory(libice)
add_subdirectory(libsm)
add_subdirectory(libxdmcp)
add_subdirectory(libx11)
add_subdirectory(zlib)
add_subdirectory(libpng)
add_subdirectory(pcre2)
